nesc-frontend/src/test/resources/integration/programs/bad/bad09/C.nc
/* Mixing tag type specifiers with simple tag specifiers. */

struct s int n;

configuration C
{
}
implementation
{
}
